Renamed Odin directory to WorkOut directory

--- a/test_web/index.html
+++ b/test_web/index.html
@@ -1,5 +1,8 @@
+<!-- Declare the File Type, HTML-->
 <!DOCTYPE html>
+<!-- Declare the Langague, English for Accessibility-->
 <html lang="en">
+    <!-- The Head is -->
     <head>
         <meta charset="UTF-8">
         <title>My First Webpage</title> 
