Added "About.html" file and "Images" directory

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -5,11 +5,11 @@
     <!-- The Head is -->
     <head>
         <meta charset="UTF-8">
-        <title>Home</title> 
+        <title>About</title> 
     </head>
 
     <body>
-        <h1>Homepage</h1>
-          <a href="../Pages/about.html">About</a>
+        <h1>About</h1>
+          <a href="../Home/index.html">Home</a>
       </body>
 </html>
