--- a/Pages/about.html
+++ b/Pages/about.html
@@ -10,6 +10,7 @@
 
     <body>
         <h1>About</h1>
-          <a href="../Home/index.html">Home</a>
+          <a href="../index.html">Home</a>
+          <img src="https://www.theodinproject.com/mstile-310x310.png" alt="The Odin Project Logo">
       </body>
 </html>
