--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <h1>Homepage</h1>
-          <a href="../Pages/about.html">About</a>
+        <h1>Home</h1>
+          <a href="./Pages/about.html">About</a>
       </body>
 </html>
