Fixed about.html link in index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
     <body>
         <h1>Home</h1>
-          <a href="./Pages/about.html">About</a>
+          <a href="Pages/about.html">About</a>
       </body>
 </html>
