add some about.html content

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -11,5 +11,6 @@
     <body>
         <h1>About</h1>
           <a href="../index.html">Home</a>
+          <p>This website will detail my personal workout plan. The plan will span over 5 days, and include a diet plan.</p>
       </body>
 </html>
