Added Content in index.html. It included the weekdays and the excerise of that day. Also a section of a healthy recipe and the protein.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
         <meta charset="UTF-8">
         <title>Home</title> 
     </head>
-
     <body>
         <h1>Home</h1>
           <a href="Pages/about.html">About</a>
+          <!-- Workout Plan Links-->
+          <h2>Workout</h2>
+          <ul>Monday - Chest </ul>
+          <ul>Tuesday - Legs</ul>
+          <ul>Wednesday - Shoulders</ul>
+          <ul>Thursday - Arms</ul>
+          <ul>Friday - Back</ul>
+          <!-- Healthy Recipes for cooking -->
+          <h2>Healthy Recipes</h2>
+          <ul>Chicken</ul>
+          <ul>Grounded Turkey</ul>
+          <ul>Steak</ul>
+          <ul>Fillet</ul>
+          <ul>Salmon</ul>
       </body>
 </html>
