Added new directories, Healthy Recipes and Workouts to organize the HTML pages of each workout and recipe. The links on the home page are now linked to each page.

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
           <a href="Pages/about.html">About</a>
           <!-- Workout Plan Links-->
           <h2>Workout</h2>
-          <ul>Monday - Chest </ul>
-          <ul>Tuesday - Legs</ul>
-          <ul>Wednesday - Shoulders</ul>
-          <ul>Thursday - Arms</ul>
-          <ul>Friday - Back</ul>
+          <ul><a href="Workouts/chest.html">Chest</a></ul>
+          <ul><a href="Workouts/legs.html">Legs</a></ul>
+          <ul><a href="Workouts/shoulders.html">Shoulders</a></ul>
+          <ul><a href="Workouts/arms.html">Arms</a></ul>
+          <ul><a href="Workouts/back.html">Back</a></ul>
           <!-- Healthy Recipes for cooking -->
           <h2>Healthy Recipes</h2>
-          <ul>Chicken</ul>
-          <ul>Grounded Turkey</ul>
-          <ul>Steak</ul>
-          <ul>Fillet</ul>
-          <ul>Salmon</ul>
+          <ul><a href="Healthy Recipes/chicken.html">Chicken</a></ul>
+          <ul><a href="Healthy Recipes/fillet.html">Grounded Turkey</a></ul>
+          <ul><a href="Healthy Recipes/steak.html">Steak</a></ul>
+          <ul><a href="Healthy Recipes/fillet.html">Fillet</a></ul>
+          <ul><a href="Healthy Recipes/salmon.html">Salmon</a></ul>
       </body>
 </html>
