Added CSS styles to the website. Chose a color palette for the background, content text, and headers.

--- a/Healthy Recipes/salmon.html
+++ b/Healthy Recipes/salmon.html
@@ -5,10 +5,11 @@
     <!-- Head -->
     <head>
         <!-- Special Characters -->
+        <link rel="stylesheet" href="../styles.css">
         <meta charset="UTF-8">
-        <title> Recipes</title>
+        <title>Salmon Recipes</title>
     </head>
     <body>
-        <h1> Recipes</h1>
+        <h1>Salmon Recipes</h1>
     </body>
 </html>
