--- a/Pages/about.html
+++ b/Pages/about.html
@@ -4,12 +4,15 @@
 <html lang="en">
     <!-- The Head is -->
     <head>
+        <link rel="stylesheet" href="../styles.css">
         <meta charset="UTF-8">
         <title>About</title> 
     </head>
     <body>
         <h1>About</h1>
+        <div class="Menu">
           <a href="../index.html">Home</a>
+        </div>
           <p>This website will detail my personal workout plan. The plan will span over 5 days, and include a diet plan.</p> 
       </body>
 </html>
