--- a/Workouts/arms.html
+++ b/Workouts/arms.html
@@ -5,6 +5,7 @@
     <!-- Head -->
     <head>
         <!-- Special Characters -->
+        <link rel="stylesheet" href="../styles.css">
         <meta charset="UTF-8">
         <title> Arm Workouts </title>
     </head>
