--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
 <html lang="en">
     <!-- The Head is -->
     <head>
+        <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
         <title>Home</title> 
     </head>
     <body>
         <h1>Home</h1>
+        <div class="Menu">
           <a href="Pages/about.html">About</a>
+        </div>
           <!-- Workout Plan Links-->
           <h2>Workout</h2>
+          <div class="Workouts">
           <ul><a href="Workouts/chest.html">Chest</a></ul>
           <ul><a href="Workouts/legs.html">Legs</a></ul>
           <ul><a href="Workouts/shoulders.html">Shoulders</a></ul>
           <ul><a href="Workouts/arms.html">Arms</a></ul>
           <ul><a href="Workouts/back.html">Back</a></ul>
+        </div>
           <!-- Healthy Recipes for cooking -->
           <h2>Healthy Recipes</h2>
           <ul><a href="Healthy Recipes/chicken.html">Chicken</a></ul>
