I created buttons for the links with better styling and easier to click. These buttons are updated with a hover aspect that changes the color of the background and text color when its active. A fitness logo has been placed on the home page. New section for creator credits and information. Text has been updated to have larger fonts and a eaiser style to read.

--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
         <title>Home</title> 
     </head>
     <body>
+      <div class="Header">
+        <div class="icon">
+          <img src="./Images/fitness-icon.png" width="50px" height="50px">
+        </div>
         <h1>Home</h1>
+      </div>
+        <!-- Navigation Menu -->
         <div class="Menu">
-          <a href="Pages/about.html">About</a>
+          <a href="Pages/about.html">ABOUT</a>
         </div>
           <!-- Workout Plan Links-->
+          <div class = "Custom-Buttons">
           <h2>Workout</h2>
-          <div class="Workouts">
           <ul><a href="Workouts/chest.html">Chest</a></ul>
           <ul><a href="Workouts/legs.html">Legs</a></ul>
           <ul><a href="Workouts/shoulders.html">Shoulders</a></ul>
           <ul><a href="Workouts/arms.html">Arms</a></ul>
           <ul><a href="Workouts/back.html">Back</a></ul>
-        </div>
           <!-- Healthy Recipes for cooking -->
           <h2>Healthy Recipes</h2>
           <ul><a href="Healthy Recipes/chicken.html">Chicken</a></ul>
@@ -29,5 +34,11 @@
           <ul><a href="Healthy Recipes/steak.html">Steak</a></ul>
           <ul><a href="Healthy Recipes/fillet.html">Fillet</a></ul>
           <ul><a href="Healthy Recipes/salmon.html">Salmon</a></ul>
+        </div>
+
+          <div class="Creator-Notes">
+          <p><a href="https://github.com/PDXLantern">PDXLantern on GitHub</a></p>
+          <p>Created by Carlos Rivera</p>
+        </div>
       </body>
 </html>
