--- a/Pages/about.html
+++ b/Pages/about.html
@@ -11,7 +11,9 @@
     <body>
         <h1>About</h1>
         <div class="Menu">
-          <a href="../index.html">Home</a>
+          <ul>
+            <li><a href="../index.html">HOME</a></li>
+            </ul>
         </div>
           <p>This website will detail my personal workout plan. The plan will span over 5 days, and include a diet plan.</p> 
       </body>
