--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 <html lang="en">
     <!-- The Head is -->
     <head>
+      <!-- Style Sheet Link-->
         <link rel="stylesheet" href="styles.css">
+        <!-- Charactor Support -->
         <meta charset="UTF-8">
+        <!-- Responsive Design for Multiple Devices-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home</title> 
     </head>
     <body>
       <div class="Header">
         <div class="icon">
-          <img src="./Images/fitness-icon.png" width="50px" height="50px">
+          <img src="./Images/fitness-icon.png" width="100px" style="max-width:80%;height:10%;">
         </div>
         <h1>Home</h1>
       </div>
