Added responsive width/ scaling / sizing for about.html, health recipe pages, and workout pages.

--- a/Workouts/arms.html
+++ b/Workouts/arms.html
@@ -7,6 +7,8 @@
         <!-- Special Characters -->
         <link rel="stylesheet" href="../styles.css">
         <meta charset="UTF-8">
+        <!-- Responsive Design for Multiple Devices-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Arm Workouts </title>
     </head>
     <body>
