--- a/Pages/about.html
+++ b/Pages/about.html
@@ -1,7 +1,9 @@
 <!-- Declare the File Type, HTML-->
 <!DOCTYPE html>
 <!-- Declare the Langague, English for Accessibility-->
-<html lang="en">
+<html lang="en"> 
+<!-- Responsive Design for Multiple Devices-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- The Head is -->
     <head>
         <link rel="stylesheet" href="../styles.css">
