Added fix for Heading 1 in the workout pages. Added responsive device support for heatlh recipes (I missed it on last commit)

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -17,6 +17,6 @@
             <li><a href="../index.html">HOME</a></li>
             </ul>
         </div>
-          <p>This website will detail my personal workout plan. The plan will span over 5 days, and include a diet plan.</p> 
+          <p class ="about">This website will detail my personal workout plan. The plan will span over 5 days, and include a diet plan.</p> 
       </body>
 </html>
