Added new workout-heading class to change Workout heading attributes.

--- a/Workouts/arms.html
+++ b/Workouts/arms.html
@@ -12,6 +12,6 @@
         <title> Arm Workouts </title>
     </head>
     <body>
-        <h1> Arm Workouts </h1>
+        <h1 class = "workout-heading"> Arm Workouts </h1>
     </body>
 </html>
