--- a/Workouts/back.html
+++ b/Workouts/back.html
@@ -9,9 +9,9 @@
         <meta charset="UTF-8">
         <!-- Responsive Design for Multiple Devices-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Back Workouts </title>
+        <title>  Back Workouts </title>
     </head>
     <body>
-        <h1>Back Workouts </h1>
+        <h1 class = "workout-heading">Back Workouts </h1>
     </body>
 </html>
