--- a/Workouts/chest.html
+++ b/Workouts/chest.html
@@ -12,6 +12,6 @@
         <title> Chest Workouts </title>
     </head>
     <body>
-        <h1>Chest Workouts </h1>
+        <h1 class = "workout-heading">Chest Workouts </h1>
     </body>
 </html>
