--- a/Workouts/legs.html
+++ b/Workouts/legs.html
@@ -12,6 +12,6 @@
         <title> Leg Workouts </title>
     </head>
     <body>
-        <h1>Leg Workouts </h1>
+        <h1 class = "workout-heading">Leg Workouts </h1>
     </body>
 </html>
