--- a/Workouts/shoulders.html
+++ b/Workouts/shoulders.html
@@ -12,6 +12,6 @@
         <title> Shoulder Workouts </title>
     </head>
     <body>
-        <h1>Shoulder Workouts </h1>
+        <h1 class = "workout-heading">Shoulder Workouts </h1>
     </body>
 </html>
