Logo has been updated with a smaller dimension. Removed orange border from the menu buttons. Updated. the About nagivation menu

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -11,11 +11,10 @@
         <title>About</title> 
     </head>
     <body>
-        <h1>About</h1>
-        <div class="Menu">
-          <ul>
-            <li><a href="../index.html">HOME</a></li>
-            </ul>
+        <!--H1-->
+        <h1 class = "header-home">ABOUT</h1>
+        <div class = "header-menu">
+          <a class = "menu-button" href="../index.html">HOME</a>
         </div>
           <p class ="about">This website will detail my personal workout plan. The plan will span over 5 days, and include a diet plan.</p> 
       </body>
