--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     </head>
     <body>
       <!--Website Icon-->
-      <img class = "header-icon" src="./Images/fitness-icon.png">
+    <div class="header-icon">
+      <img class = "img-icon" src="./Images/fitness-icon.png">
+    </div>
         <!--H1-->
-        <h1 class = "header-home">Home</h1>
+        <h1 class = "header-home">HOME</h1>
       </div>
         <!--Navigation Menu -->
         <div class = "header-menu">
@@ -45,7 +47,7 @@
         <hr class="dashed">
         <!--Footer-Creator-->
         <div class="footer-creator">
-          <p a class="footer-github-link" href="https://github.com/PDXLantern">PDXLantern on GitHub</a></p>
+          <a class="footer-github-link" href="https://github.com/PDXLantern">PDXLantern on GitHub</a>
           <p a class="footer-signature">Created by Carlos Rivera</a></p>
         </div>
       </body>
