Added menu buttons class and started a new navigation module.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       </div>
         <!--Navigation Menu -->
         <div class = "header-menu">
-          <a class = "menu-button" href="Pages/about.html">ABOUT</a>
+          <ul><a class = "menu-button" href="Pages/about.html">ABOUT</a></ul>
+          <ul><a class = "menu-button" href="Pages/about.html">WORKOUTS</a></ul>
+          <ul><a class = "menu-button" href="Pages/about.html">HEALTHY RECIPES</a></ul>
         </div>
           <!--Workout Plan Links-->
           <h2 class = "list-heading">Workout</h2>
