--- a/index.html
+++ b/index.html
@@ -24,26 +24,8 @@
         <!--Navigation Menu -->
         <div class = "header-menu">
           <ul><a class = "menu-button" href="Pages/about.html">ABOUT</a></ul>
-          <ul><a class = "menu-button" href="Pages/about.html">WORKOUTS</a></ul>
-          <ul><a class = "menu-button" href="Pages/about.html">HEALTHY RECIPES</a></ul>
-        </div>
-          <!--Workout Plan Links-->
-          <h2 class = "list-heading">Workout</h2>
-          <div class = "list-workouts">
-            <ul><a class="button-link" href="Workouts/chest.html">Chest</a></ul>
-            <ul><a class="button-link" href="Workouts/legs.html">Legs</a></ul>
-            <ul><a class="button-link" href="Workouts/shoulders.html">Shoulders</a></ul>
-            <ul><a class="button-link" href="Workouts/arms.html">Arms</a></ul>
-            <ul><a class="button-link" href="Workouts/back.html">Back</a></ul>
-        </div>
-          <!--Healthy Recipes Links -->
-          <div class = "list-recipes">
-          <h2 class = "list-heading">Healthy Recipes</h2>
-            <ul><a class="button-link" href="Healthy Recipes/chicken.html">Chicken</a></ul>
-            <ul><a class="button-link" href="Healthy Recipes/grounded-turkey.html">Grounded Turkey</a></ul>
-            <ul><a class="button-link" href="Healthy Recipes/steak.html">Steak</a></ul>
-            <ul><a class="button-link" href="Healthy Recipes/fillet.html">Fillet</a></ul>
-            <ul><a class="button-link" href="Healthy Recipes/salmon.html">Salmon</a></ul>
+          <ul><a class = "menu-button" href="Pages/workouts.html">WORKOUTS</a></ul>
+          <ul><a class = "menu-button" href="Pages/healthy-recipes.html">HEALTHY RECIPES</a></ul>
         </div>
         <!--Spacer-->
         <hr class="dashed">
